@@ -364,7 +364,11 @@ function when(value, resolved, rejected) {
         try {
             return resolved ? resolved(value) : value;
         } catch (exception) {
-            print(exception && exception.stack || exception);
+            if (typeof process !== "undefined") {
+                process.emit('uncaughtException', exception);
+            } else {
+                print(exception && exception.stack || exception);
+            }
             return reject(exception);
         }
     }
